--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -1,1 +1,149 @@
-index from thymeleaf for kiptanui
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+<head>
+<title>Business Template</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<!-- Styles -->
+<link rel="stylesheet" type="text/css"
+	href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css"
+	th:href="#{url.bootstrap.css}" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{/resources/theme/css/compiled/bootstrap-overrides.css} + '?version=' +  #{app.version}" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{/resources/theme/css/compiled/theme.css} + '?version=' +  #{app.version}" />
+
+<link
+	href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic'
+	rel='stylesheet' type='text/css' />
+
+<link rel="stylesheet" type="text/css"
+	th:href="@{/resources/theme/css/compiled/sign-in.css} + '?version=' +  #{app.version}"
+	media="screen" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{/resources/theme/css/lib/animate.css} + '?version=' +  #{app.version}"
+	media="screen, projection" />
+
+<!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
+<body>
+	<div class="navbar navbar-inverse navbar-static-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-ex1-collapse">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a href="index.html" class="navbar-brand"><strong>CLEAN
+						CANVAS</strong></a>
+			</div>
+
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="about-us.html">ABOUT US</a></li>
+					<li class="dropdown active"><a href="#"
+						class="dropdown-toggle" data-toggle="dropdown">PAGES <b
+							class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="features.html">Features</a></li>
+							<li><a href="services.html">Services</a></li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a href="portfolio-item.html">Portfolio Item</a></li>
+							<li><a href="coming-soon.html">Coming Soon</a></li>
+							<li><a href="sign-in.html">Sign in</a></li>
+							<li><a href="sign-up.html">Sign up</a></li>
+							<li><a href="backgrounds.html">Backgrounds</a></li>
+						</ul></li>
+					<li><a href="pricing.html">PRICING</a></li>
+					<li><a href="contact.html">CONTACT US</a></li>
+					<li><a href="blog.html">BLOG</a></li>
+					<li><a href="sign-up.html">Sign up</a></li>
+					<li class="active"><a href="sign-in.html">Sign in</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<!-- Sign In Option 1 -->
+	<div id="sign_in1">
+		<form class="form-inline" action="" method="post"
+			th:action="@{/j_spring_security_check}">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 header">
+						<h4>Log in to your account</h4>
+					</div>
+
+					<div class="col-md-12 footer">
+
+						<input type="text" placeholder="username" class="form-control"
+							name="j_username" /> <input type="password"
+							placeholder="Password" class="form-control" name="j_password" />
+						<input type="submit" value="sign in" />
+
+					</div>
+					<div class="col-md-12 proof">
+						<div class="col-md-6">admin</div>
+						<div class="col-md-6">diamond*64</div>
+					</div>
+					<div class="col-md-12 proof">
+						<div class="col-md-6">user01</div>
+						<div class="col-md-6">ph3a9iab</div>
+					</div>
+					<div class="col-md-12 proof">
+						<div class="col-md-6 remember">
+							<label class="checkbox"> <input type="checkbox"
+								name="_spring_security_remember_me" /> Remember me
+							</label> <a href="reset.html">Forgot password?</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</form>
+	</div>
+
+	<!-- starts footer -->
+	<footer id="footer">
+		<div class="container">
+			<div class="row info">
+				<div class="col-sm-6 residence">
+					<ul>
+						<li>2301 East Lamar Blvd. Suite 140. City, Arlington.</li>
+						<li>United States, Zip Code TX 76006.</li>
+					</ul>
+				</div>
+				<div class="col-sm-5 touch">
+					<ul>
+						<li><strong>P.</strong> 1 817 274 2933</li>
+						<li><strong>E.</strong><a href="#"> bootstrap@twitter.com</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row credits">
+				<div class="col-md-12">
+					<div class="row copyright">
+						<div class="col-md-12">(c) 2013 Clean Canvas. All rights
+							reserved. Theme by Detail Canvas.</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<script th:src="#{url.jquery.js}"
+		src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+	<script th:src="#{url.bootstrap.js}"
+		src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
+	<script
+		th:src="@{/resources/theme/js/theme.js} + '?version=' +  #{app.version}"></script>
+</body>
+</html>
