--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -92,11 +92,7 @@
 					</div>
 					<div class="col-md-12 proof">
 						<div class="col-md-6">admin</div>
-						<div class="col-md-6">diamond*64</div>
-					</div>
-					<div class="col-md-12 proof">
-						<div class="col-md-6">user01</div>
-						<div class="col-md-6">ph3a9iab</div>
+						<div class="col-md-6">rh23i5ojuq58</div>
 					</div>
 					<div class="col-md-12 proof">
 						<div class="col-md-6 remember">
