--- a/src/main/webapp/WEB-INF/templates/admin/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/admin/user/list.html
@@ -115,6 +115,7 @@
 								<thead>
 									<tr>
 										<th>No</th>
+										<th>Id</th>
 										<th>Name</th>
 										<th>Edit Profile</th>
 										<th>Edit Role</th>
@@ -124,6 +125,7 @@
 								<tbody>
 									<tr th:each="row,rowStat : ${userList}">
 										<td th:text="${rowStat.count}">1</td>
+										<td th:text="${row.id}">Thymus Thymi</td>
 										<td th:text="${row.name}">Thymus Thymi</td>
 										<td><a href="#">Edit Profile</a></td>
 										<td><a href="#">Edit Role</a></td>
